--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -559,6 +559,7 @@ img.c-icon
   &#internets
     background-image: url('../icons/global_internet.png')
     background-size: 180px
+    background-position-y: 200px
     @include smooth-slow
     &.active
       opacity: 1 !important
@@ -586,13 +587,13 @@ img.c-icon
   @include smooth
   &#my-info
     position: fixed
-    bottom: 50px
+    bottom: 55px
     &.ng-hide
       @include un-ng-hide
       bottom: -100px
   &#their-info
     position: fixed
-    top: 50px
+    top: 40px
     &.ng-hide
       @include un-ng-hide
       top: -100px
