--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -285,10 +285,18 @@ ul
   background: transparent url('../icons/search.png') no-repeat center
   background-size: 16px
   cursor: pointer
+  opacity: 0.3
   @include smooth
   &:hover, &:focus
-    opacity: 0.5
+    opacity: 0.1
     outline: none
+  &.on
+    opacity: 1.0
+    &:active, &:focus
+      outline: none
+      opacity: 0.65
+    &:hover
+      opacity: 0.6
 
 .filter
   margin: 0
@@ -302,14 +310,14 @@ ul
   font-size: $fontSize * 1.5
   font-weight: 900
   color: #222
-  opacity: 0.3
+  opacity: 0.2
   cursor: pointer
   @include smooth
   &:active, &:focus
     outline: none
-    opacity: 0.25
+    opacity: 0.15
   &:hover
-    opacity: 0.2
+    opacity: 0.1
   // When the filter is on, the opacity changes are different.
   &.on
     opacity: 1.0
