--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -600,6 +600,27 @@ img.c-icon {
     background-image: url("../icons/path-right.png");
     opacity: 0.07; }
 
+.uproxy-deco {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  opacity: 0.25;
+  background: transparent no-repeat center;
+  background-image: url("../icons/uproxy-19.png");
+  background-size: 12px;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
+  .uproxy-deco#their-uproxy {
+    top: 167px;
+    left: 122px; }
+  .uproxy-deco#my-uproxy {
+    bottom: 176px;
+    right: 118px; }
+  .uproxy-deco:hover {
+    opacity: 0.6; }
+
 .access-note {
   position: absolute;
   top: 270px;
