--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -632,7 +632,7 @@ img.c-icon
     height: 110px
     border-color: #ddd
     background-size: contain
-    box-shadow: 2px 3px 7px #bbb
+    box-shadow: 1px 2px 5px #ccc
 
 .contact-name
   text-align: center
