--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -629,9 +629,11 @@ img.c-icon {
   cursor: default; }
 
 .contact-info {
+  position: relative;
   text-align: center;
   text-shadow: 0px 1px 1px #cccccc;
   width: 100%;
+  z-index: 2;
   -webkit-transition: all 0.23s !important;
   -moz-transition: all 0.23s !important;
   -o-transition: all 0.23s !important;
@@ -657,13 +659,38 @@ img.c-icon {
     border-color: #dddddd;
     background-size: contain;
     box-shadow: 1px 2px 5px #cccccc; }
+  .contact-info .details {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    cursor: default;
+    text-align: center;
+    -webkit-transition: all 0.5s !important;
+    -moz-transition: all 0.5s !important;
+    -o-transition: all 0.5s !important;
+    transition: all 0.5s !important; }
+    .contact-info .details.ng-hide {
+      display: block !important;
+      pointer-events: none;
+      opacity: 0; }
+    .contact-info .details .picCover {
+      display: inline-block;
+      background-color: white;
+      width: 116px;
+      height: 120px;
+      opacity: 0.95; }
+    .contact-info .details .description {
+      position: absolute;
+      top: 0;
+      width: 100%; }
 
 .contact-name {
   text-align: center; }
 
-.detail-panel {
-  position: fixed;
-  bottom: 64px;
+.mode-panel {
+  position: absolute;
+  bottom: 4px;
   width: 100%;
   text-align: center; }
 
