--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -240,21 +240,23 @@ ul {
   #actions:hover {
     box-shadow: 0 1px 6px #aaaaaa; }
 
+input[type=text] {
+  border: 1px solid #bbbbbb;
+  outline: none;
+  color: #333333;
+  padding: 8px 20px;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
+
 #search-contacts {
   display: block;
   position: relative;
   z-index: 20;
   width: 370px;
   height: 34px;
-  margin: 0;
-  padding: 8px 20px;
-  border: 1px solid #bbbbbb;
-  outline: none;
-  color: #333333;
-  -webkit-transition: all 0.23s !important;
-  -moz-transition: all 0.23s !important;
-  -o-transition: all 0.23s !important;
-  transition: all 0.23s !important; }
+  margin: 0; }
   #search-contacts:hover {
     box-shadow: 0 1px 2px #dddddd inset; }
   #search-contacts:focus {
@@ -551,6 +553,7 @@ img.c-icon {
 #access {
   display: inline-block;
   position: fixed;
+  text-align: center;
   width: 100%;
   height: 100%;
   padding-top: 40px;
@@ -724,9 +727,6 @@ img.c-icon {
   text-decoration: none;
   cursor: pointer; }
 
-.chat-btn {
-  background-image: url("../icons/chat.png"); }
-
 .uproxy-box {
   position: absolute;
   display: inline-block;
@@ -761,6 +761,41 @@ img.c-icon {
       background-image: url("../icons/arrow-down-animate.gif"); }
     .uproxy-box.client .btn {
       margin-top: 47px; }
+
+.chat-btn {
+  background-image: url("../icons/chat.png"); }
+
+#chat-box {
+  position: absolute;
+  top: 170px;
+  width: 100%;
+  height: 231px;
+  background-color: white;
+  border: 1px solid #dddddd;
+  box-shadow: 0 1px 3px #eeeeee; }
+
+#chat-input {
+  display: block;
+  width: 320px;
+  position: absolute;
+  bottom: 0;
+  line-height: 10px; }
+
+#chat-send {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 34px;
+  margin: 2px; }
+
+#chat-log {
+  text-align: left;
+  width: 100%;
+  height: 190px;
+  padding: 8px;
+  font-size: 10px;
+  border: none;
+  color: #888888; }
 
 .instance-actions {
   text-align: center;
