--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -251,6 +251,13 @@ ul
   &:hover
     box-shadow: 0 1px 6px #aaa
 
+input[type=text]
+  border: 1px solid #bbb
+  outline: none
+  color: #333
+  padding: 8px 20px
+  @include smooth
+
 #search-contacts
   display: block
   position: relative
@@ -258,11 +265,10 @@ ul
   width: 370px
   height: 34px
   margin: 0
-  padding: 8px 20px
-  border: 1px solid #bbb
-  outline: none
-  color: #333
-  @include smooth
+  // border: 1px solid #bbb
+  // outline: none
+  // color: #333
+  // @include smooth
   &:hover
     box-shadow: 0 1px 2px #ddd inset
   &:focus
@@ -538,6 +544,7 @@ img.c-icon
 #access
   display: inline-block
   position: fixed
+  text-align: center
   width: 100%
   height: 100%
   padding-top: 40px
@@ -694,9 +701,6 @@ img.c-icon
   text-decoration: none
   cursor: pointer
 
-.chat-btn
-  background-image: url('../icons/chat.png')
-
 // Contains the actual trust & action buttons
 .uproxy-box
   position: absolute
@@ -732,6 +736,39 @@ img.c-icon
       background-image: url('../icons/arrow-down-animate.gif')
     & .btn
       margin-top: 47px
+
+.chat-btn
+  background-image: url('../icons/chat.png')
+// Chat box!
+#chat-box
+  position: absolute
+  top: 170px
+  width: 100%
+  height: 231px
+  background-color: #fff
+  border: 1px solid #ddd
+  box-shadow: 0 1px 3px #eee
+
+#chat-input
+  display: block
+  width: 320px
+  position: absolute
+  bottom: 0
+  line-height: 10px
+#chat-send
+  position: absolute
+  right: 0
+  bottom: 0
+  height: 34px
+  margin: 2px
+#chat-log
+  text-align: left
+  width: 100%
+  height: 190px
+  padding: 8px
+  font-size: 10px
+  border: none
+  color: #888
 
 .instance-actions
   text-align: center
