--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -602,6 +602,10 @@ img.c-icon {
   .bg-deco#path-right {
     background-image: url("../icons/path-right.png");
     opacity: 0.07; }
+  .bg-deco.ng-hide {
+    display: block !important;
+    pointer-events: none;
+    opacity: 0.01 !important; }
 
 .uproxy-deco {
   position: absolute;
