--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -585,7 +585,9 @@ img.c-icon
   &#path-right
     background-image: url('../icons/path-right.png')
     opacity: 0.07
-
+  &.ng-hide
+    @include un-ng-hide
+    opacity: 0.01 !important
 // This is the uproxy icon on the diagram.
 .uproxy-deco
   position: absolute
