--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -11,6 +11,13 @@
 
 $fontSize: 16px
 $defaultSmoothSpeed: 0.23s
+$uiHeight: 600px
+
+#popup
+  width: 370.8204px
+  height: $uiHeight
+  .footer
+    text-align: right
 
 @font-face
   font-family: 'Eurostile'
@@ -34,10 +41,14 @@ $defaultSmoothSpeed: 0.23s
 
 body
   font-family: Eurostile, sans-serif
-  height: 100%
+  position: absolute
+  display: none
+  height: $uiHeight
+  display: block
   margin: 0
   padding: 0
   overflow: hidden
+  overflow-y: hidden
   font-size: $fontSize
 
 h1, h2, h3, h4, h5
@@ -48,7 +59,7 @@ ul
   padding: 0
 
 // Prettier scrollbars.
-::-webkit-scrollbar
+  ::-webkit-scrollbar
   width: 6px
   &:hover
     width: 10px
@@ -103,7 +114,7 @@ ul
   padding: 0 8px
 
 #contact-header
-  position: fixed
+  position: absolute
   z-index: 300
   width: 100%
   top: 0
@@ -111,7 +122,7 @@ ul
   box-shadow: 0 1px 3px #eee
   background-color: #fff
   & h1
-    position: fixed
+    position: absolute
     width: 100%
     padding: 0 50px
     text-align: center
@@ -153,7 +164,7 @@ ul
   color: #900
 
 #filterTooltip
-  position: fixed
+  position: absolute
   z-index: 50
   top: 30px
   opacity: 0.85
@@ -174,7 +185,7 @@ ul
 
 //---------------------------- Login Splash -----------------------------------
 #login-splash
-  position: fixed
+  position: absolute
   text-align: center
   padding-top: 30px
   width: 100%
@@ -361,7 +372,7 @@ input[type=text]
     opacity: 0.7
 
 #options-btn
-  position: fixed
+  position: absolute
   z-index: 600
   top: 4px
   right: 8px
@@ -381,7 +392,7 @@ input[type=text]
     opacity: 0.3
 
 #options-btn-tip
-  position: fixed
+  position: absolute
   z-index: 500
   top: 30px
   right: 2px
@@ -543,7 +554,7 @@ img.c-icon
 // roster entry.
 #access
   display: inline-block
-  position: fixed
+  position: absolute
   text-align: center
   width: 100%
   height: 100%
@@ -558,7 +569,7 @@ img.c-icon
 
 // This is the faded background image of the internets and arrows.
 .bg-deco
-  position: fixed
+  position: absolute
   top: 0
   width: 100%
   height: 100%
@@ -626,13 +637,13 @@ img.c-icon
   z-index: 2
   @include smooth
   &#my-info
-    position: fixed
+    position: absolute
     bottom: 55px
     &.ng-hide
       @include un-ng-hide
       bottom: -100px
   &#their-info
-    position: fixed
+    position: absolute
     top: 40px
     &.ng-hide
       @include un-ng-hide
@@ -828,7 +839,7 @@ img.c-icon
   font-family: monospace
 
 #status
-  position: fixed
+  position: absolute
   z-index: 50
   bottom: 0
   width: 100%
@@ -866,12 +877,6 @@ img.c-icon
   bottom: 0
   padding: 8px
 
-#popup
-  width: 370.8204px
-  height: 600px
-  .footer
-    text-align: right
-
 details
   & > summary
     cursor: pointer
@@ -888,7 +893,7 @@ details
   width: 50%
 
 #debug
-  position: fixed
+  position: absolute
   top: 0
   right: 0
   width: 50%
@@ -913,11 +918,11 @@ details
   @include smooth
 
 .dbg
-  position: fixed
+  position: absolute
   z-index: 500
 
 #reset-box
-  position: fixed
+  position: absolute
   bottom: 0
 
 details.advanced
