hook fake state object to isolated ui

--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -399,6 +399,7 @@ input[type=text]
 // --------------------------- Primary view ------------------------------------
 #main-view
   z-index: 100
+  background-color: #fff
   @include smooth-slow
   &.ng-hide
     @include un-ng-hide
