networks in UI reflect actual available social providers

--- a/src/generic_ui/styles/main.sass
+++ b/src/generic_ui/styles/main.sass
@@ -188,7 +188,7 @@ ul
     top: 600px
 
 .network-btn
-  display: inline-block
+  display: block
   margin: 8px
   & .btn
     font-size: $fontSize * 1.5
