--- a/src/generic_ui/templates/consent.html
+++ b/src/generic_ui/templates/consent.html
@@ -1,94 +1,77 @@
-<div class="instance-actions" ng-show="ui.instance && ui.isAccess()">
+<div class='instance-actions' ng-show='ui.instance && ui.isAccess()'>
 
-  <div class="uproxy-box proxy"
-      ng-switch="currentProxyState()">
-    <div ng-switch-when="GRANTED">
-      <p class="uproxytip">You have access.
+  <div class='uproxy-box proxy'
+      ng-switch='currentProxyState()'>
+
+    <div ng-switch-when='GRANTED'>
+      <p class='uproxytip'>You have access.
       </p>
-      <button class="btn"
-          ng-disabled="ui.pendingProxyTrustChange"
-          ng-hide="ui.instance.access.asProxy"
-          ng-click="startAccess()">
-        Start
-      </button>
+      <uproxy-consent-action text='Start'
+          ng-hide='ui.instance.access.asProxy'
+          action='startAccess'
+      </uproxy-consent-action>
       <!-- TODO: Include an indicator for when proxying is starting up.-->
-      <button class="btn"
-          ng-show="ui.instance.access.asProxy"
-          ng-disabled="ui.pendingProxyTrustChange"
-          ng-click="stopAccess()">
-        Stop
-      </button>
+      <uproxy-consent-action text='Stop'
+          ng-show='ui.instance.access.asProxy'
+          action='stopAccess'
+      </uproxy-consent-action>
     </div>
 
-    <div ng-switch-when="USER_REQUESTED">
-      <p class="uproxytip">
+    <div ng-switch-when='USER_REQUESTED'>
+      <p class='uproxytip'>
         Requesting access from {{ui.user.name}}...
       </p>
-      <button class="btn"
-          ng-disabled="ui.pendingProxyTrustChange"
-          ng-click="cancelRequest()">
-        Cancel
-      </button>
+      <uproxy-consent-action text='Cancel'
+          action='CANCEL_REQUEST'
+      </uproxy-consent-action>
     </div>
-    <div ng-switch-when="REMOTE_OFFERED">
-      <p class="uproxytip">They've offered you access.
+    <div ng-switch-when='REMOTE_OFFERED'>
+      <p class='uproxytip'>They've offered you access.
       </p>
-      <button class="btn black"
-          ng-disabled="ui.pendingProxyTrustChange"
-          ng-click="acceptOffer()">
-        Accept
-      </button>
-      <button class="btn"
-          ng-disabled="ui.pendingProxyTrustChange"
-          ng-click="declineOffer()">
-        Decline
-      </button>
+      <uproxy-consent-action text='Accept'
+          action='ACCEPT_OFFER'
+          class='black'>
+      </uproxy-consent-action>
+      <uproxy-consent-action text='Decline'
+          action='IGNORE_OFFER'>
+      </uproxy-consent-action>
     </div>
     <div ng-switch-default>
-      <p class="uproxytip">No access yet.
+      <p class='uproxytip'>No access yet.
       </p>
-      <button class="btn"
-          ng-disabled="ui.pendingProxyTrustChange"
-          ng-click="requestAccess()">
-        Request
-      </button>
+      <uproxy-consent-action text='Request'
+          action='REQUEST'>
+      </uproxy-consent-action>
     </div>
   </div>
 
-  <div class="uproxy-box client"
-      ng-class="{active:'running'==ui.instance.status.client}"
-      ng-switch="currentClientState()">
-    <div ng-switch-when="NONE">
-      <p class="uproxytip">You have not granted them access.
+  <div class='uproxy-box client'
+      ng-class="{active:ui.instance.access.asClient}"
+      ng-switch='currentClientState()'>
+    <div ng-switch-when='NONE'>
+      <p class='uproxytip'>You have not granted them access.
       </p>
-      <button class="btn"
-          ng-disabled="ui.pendingClientTrustChange"
-          ng-click="offerAccess()">
-        Offer Access
-      </button>
+      <uproxy-consent-action text='Offer Access'
+          action='OFFER'
+      </uproxy-consent-action>
     </div>
-    <div ng-switch-when="REMOTE_REQUESTED">
-      <p class="uproxytip">They requested access through you.
+    <div ng-switch-when='REMOTE_REQUESTED'>
+      <p class='uproxytip'>They requested access through you.
       </p>
-      <button class="btn black"
-          ng-disabled="ui.pendingClientTrustChange"
-          ng-click="allowRequest()">
-        Grant
-      </button>
-      <button class="btn"
-          ng-disabled="ui.pendingClientTrustChange"
-          ng-click="ignoreRequest()">
-        Ignore
-      </button>
+      <uproxy-consent-action text='Grant'
+          action='ALLOW_REQUEST'
+          class='black'
+      </uproxy-consent-action>
+      <uproxy-consent-action text='Ignore'
+          action='IGNORE_REQUEST'
+      </uproxy-consent-action>
     </div>
     <div ng-switch-default>
-      <p class="uproxytip">You've given them access.
+      <p class='uproxytip'>You've given them access.
       </p>
-      <button class="btn"
-          ng-disabled="ui.pendingClientTrustChange"
-          ng-click="cancelOffer()">
-        Revoke Access
-      </button>
+      <uproxy-consent-action text='Revoke Access'
+          action='CANCEL_OFFER'
+      </uproxy-consent-action>
     </div>
   </div>
 </div>
