start/stop proxying works in uistatic, add InstancePath

--- a/src/generic_ui/templates/proxy-gadget.html
+++ b/src/generic_ui/templates/proxy-gadget.html
@@ -5,8 +5,8 @@
   Start
 </button>
 <!-- TODO: Include an indicator for when proxying is starting up.-->
-<button class="btn"
-    ng-disabled='!ui.instance.assess.asProxy'
+<button class='btn'
+    ng-disabled='ui.instance.assess.asProxy'
     ng-show='ui.instance.access.asProxy'
     ng-click='stop()'>
   Stop
