New error popup, shown when connection to server breaks.

--- a/src/generic_ui/styles/main.sass
+++ b/src/generic_ui/styles/main.sass
@@ -887,6 +887,32 @@ img.c-icon
   bottom: 0
   padding: 8px
 
+#error-popup-mask
+  background-color: rgba(255, 255, 255, 0.65)
+  z-index: 1000
+  position: absolute
+  top: 0px
+  height: 100%
+  width: 100%
+
+#error-popup
+  z-index: 1001
+  width: 80%
+  height: 83%
+  margin-left: 10%
+  margin-top: 13%
+  border: 1px #999999 solid
+  background-color: white
+  padding: 1em
+  .btn
+    width: 40%
+    margin-left: 30%
+  ul
+    height: 88%
+    overflow-y: scroll
+  li
+    margin-bottom: 1em
+
 #popup
   width: 370.8204px
   height: 600px
