--- a/src/generic_ui/templates/proxy-gadget.html
+++ b/src/generic_ui/templates/proxy-gadget.html
@@ -1,13 +1,13 @@
 <button class='btn'
-    ng-disabled='ui.instance.assess.asProxy'
-    ng-hide='ui.instance.access.asProxy'
+    ng-disabled='ui.proxyServerInstance.assess.asProxy'
+    ng-hide='ui.proxyServerInstance.access.asProxy'
     ng-click='start()'>
   Start
 </button>
 <!-- TODO: Include an indicator for when proxying is starting up.-->
 <button class='btn'
-    ng-disabled='ui.instance.assess.asProxy'
-    ng-show='ui.instance.access.asProxy'
+    ng-disabled='ui.proxyServerInstance.assess.asProxy'
+    ng-show='ui.proxyServerInstance.access.asProxy'
     ng-click='stop()'>
   Stop
 </button>
