Fix UI bugs before dogfood

--- a/src/generic_ui/styles/main.sass
+++ b/src/generic_ui/styles/main.sass
@@ -443,6 +443,15 @@ input[type=text]
     @include un-ng-hide
     left: -400px
 
+.no-contacts-found
+  position: absolute
+  background-color: #fafafa
+  width: 100%
+  min-height: 100%
+  margin: 0
+  padding: 0.5em 0.5em
+  @include smooth
+
 .contacts
   position: absolute
   background-color: #fafafa
