--- a/src/generic_ui/styles/main.sass
+++ b/src/generic_ui/styles/main.sass
@@ -208,6 +208,11 @@ ul
     vertical-align: middle
     margin-bottom: 23px
 
+#uproxy-warning
+  margin-left: 1em
+  margin-right: 1em
+  margin-top: 5em
+
 .description
   color: #222
   text-shadow: 1px 2px 2px #aaa
