--- a/src/generic_ui/styles/main.sass
+++ b/src/generic_ui/styles/main.sass
@@ -68,6 +68,14 @@ ul
   height: 600px
   position: fixed
 
+.get-or-give-buttons
+  margin-bottom: 0.5em
+  margin-left: 0.5em
+  text-align: left
+
+.instance-actions .get-or-give-buttons .btn
+  margin: 0
+
 .btn
   border: 1px solid #ccc
   color: #333
@@ -573,39 +581,6 @@ img.c-icon
     opacity: 0
     left: 400px
 
-// This is the faded background image of the internets and arrows.
-.bg-deco
-  position: absolute
-  top: 0
-  width: 100%
-  height: 100%
-  background: transparent no-repeat center
-  pointer-events: none
-  opacity: 0.2
-  @include smooth
-  &.faded
-    opacity: 0.02 !important
-  &.darker
-    opacity: 0.25 !important
-  &.active
-    opacity: 0.5 !important
-  &#internets
-    background-image: url('../icons/global_internet.png')
-    background-size: 120px
-    background-position-y: 238px
-    @include smooth-slow
-    &.active
-      opacity: 1 !important
-  &#path-left
-    background-image: url('../icons/path-left.png')
-    opacity: 0.07
-  &#path-right
-    background-image: url('../icons/path-right.png')
-    opacity: 0.07
-  &.ng-hide
-    @include un-ng-hide
-    opacity: 0.01 !important
-
 
 // Typically displayed when the contact does not have uproxy installed
 .access-note
@@ -618,31 +593,29 @@ img.c-icon
 
 // Container for a user's profile picture and such
 .contact-info
-  position: relative
+  position: absolute
   text-align: center
   text-shadow: 0px 1px 1px #ccc
   width: 100%
   z-index: 2
   @include smooth
-  &#my-info
-    position: absolute
-    bottom: 55px
-    &.ng-hide
-      @include un-ng-hide
-      bottom: -100px
-  &#their-info
-    position: absolute
-    top: 40px
-    &.ng-hide
-      @include un-ng-hide
-      top: -100px
   & img.contact-image
     position: relative
-    width: 110px
-    height: 110px
     border-color: #ddd
     background-size: contain
     box-shadow: 1px 2px 5px #ccc
+  &.their-info
+    img.contact-image
+      height: 110px
+      width: 110px
+    .contact-name
+      width: 110px
+  &.my-info
+    img.contact-image
+      height: 75px
+      width: 75px
+    .contact-name
+      width: 75px
   & .details
     position: absolute
     top: 0
@@ -661,22 +634,22 @@ img.c-icon
       position: absolute
       top: 0
       width: 100%
-
-.contact-name-bar
-  position: absolute
-  left: 0
-  right: 0
-  bottom: 0
-  z-index: 2
-
-.contact-name
-  width: 110px
-  background-color: rgba(0, 0, 0, 0.5)
-  color: white
-  text-shadow: black 0px 5px 5px
-  word-wrap: break-word
-  display: inline-block
-  margin-left: 2px  // To compensate for image border.
+  .contact-img-wrapper
+    position: relative
+  .contact-name-bar
+    position: absolute
+    left: 0
+    right: 0
+    bottom: 0
+    z-index: 2
+    font-size: 16px
+  .contact-name
+    background-color: rgba(0, 0, 0, 0.5)
+    color: white
+    text-shadow: black 0px 5px 5px
+    word-wrap: break-word
+    display: inline-block
+    margin-left: 2px  // To compensate for image border.
 
 .mode-panel
   position: absolute
@@ -712,41 +685,46 @@ img.c-icon
   text-decoration: none
   cursor: pointer
 
+.consent-button-wrapper
+  position: absolute
+  width: 100%
+
+// Server should always be at the top, so get mode has You at the bottom
+// while give mode has You at the top.
+.movable-proxy-controls
+  &.get
+    .their-info
+      top: 200px
+    .consent-button-wrapper
+      top: 310px
+    .my-info
+      top: 405px
+  &.give
+    .my-info
+      top: 200px
+    .consent-button-wrapper
+      top: 275px
+    .their-info
+      top: 375px
+
 // Contains the actual trust & action buttons
 .uproxy-box
-  position: absolute
-  display: inline-block
   background: no-repeat center
-  height: 100px
-  width: 148px
+  height: 85px
   & .uproxytip
-    position: absolute
-    width: 100%
     text-align: center
-    color: #888
-    padding: 0 8px
-    background-color: #fff
     opacity: 0.7
     cursor: default
+    margin-top: 0.5em
   &.proxy
-    left: 0
-    top: 150px
     background-image: url('../icons/arrow-up.png')
-    background-position-y: top
-    padding-top: 12px
-    & .uproxytip
-      bottom: 0
   &.client
-    right: 0
+    //right: 0
     background-image: url('../icons/arrow-down.png')
     background-position-y: bottom
-    width: 158px
-    & .uproxytip
-      top: 0
     &.active
+      // TODO: this isn't working yet, we should make this work
       background-image: url('../icons/arrow-down-animate.gif')
-    & .btn
-      margin-top: 47px
 
 .chat-btn
   background-image: url('../icons/chat.png')
@@ -785,11 +763,10 @@ img.c-icon
   text-align: center
   font-size: $fontSize * 0.8
   position: absolute
-  top: 165px
   width: 100%
   & .btn
     padding: 6px 12px
-    margin-top: 16px
+    margin-top: 10px
     text-shadow: 0 1px 1px #888
     border-radius: 3px
     font-size: 11px
@@ -801,6 +778,15 @@ img.c-icon
       &:hover, &:focus
         color: #fff
         background-color: #444
+
+.instance-actions .internet-text
+  color: white
+  position: absolute
+  top: 100px
+  margin-left: auto
+  margin-right: auto
+  width: 100%
+  font-size: 20px
 
 .client-details
   position: relative
