Rename isAccess, View.ACCESS

--- a/src/generic_ui/templates/user-access.html
+++ b/src/generic_ui/templates/user-access.html
@@ -1,4 +1,4 @@
-<div class='instance-actions' ng-show='ui.proxyServerInstance && ui.isAccess()'>
+<div class='instance-actions' ng-show='ui.proxyServerInstance && ui.isUserView()'>
 
   <div class='get-or-give-buttons'>
     I would like to
