Changes for contacts with no image

--- a/src/generic_ui/templates/user-access.html
+++ b/src/generic_ui/templates/user-access.html
@@ -117,9 +117,7 @@
         <div class="contact-name-bar">
           <p class="contact-name">{{ui.user.name}}</p>
         </div>
-        <img ng-show="ui.user.imageData" class="contact-image"
-             ng-src='{{ui.user.imageData?ui.user.imageData:""}}'>
-        <img ng-hide="ui.user.imageData" class="contact-image">
+        <img class="contact-image" ng-src='{{ui.user.imageData}}'>
       </div>
     </div>  <!-- end of #their-info -->
 
