--- a/src/generic_ui/styles/roster.sass
+++ b/src/generic_ui/styles/roster.sass
@@ -167,7 +167,7 @@
 .contacts li
   position: relative
   z-index: 0
-  height: 65px
+  min-height: 65px
   cursor: default
   padding: 6px 75px
   white-space: nowrap
