Assorted bugs fixed

--- a/src/generic_ui/styles/roster.sass
+++ b/src/generic_ui/styles/roster.sass
@@ -311,3 +311,11 @@ img.c-icon
     word-wrap: break-word
     display: inline-block
     margin-left: 2px  // To compensate for image border.
+
+.instance-description
+  margin-top: 0.25em
+  &.online:hover
+    font-weight: bold
+    cursor: pointer
+  &.offline
+    color: #999999
