--- a/src/generic_ui/templates/user-access.html
+++ b/src/generic_ui/templates/user-access.html
@@ -115,7 +115,7 @@
     <div class="their-info contact-info">
       <div class='contact-img-wrapper'>
         <div class="contact-name-bar">
-          <p class="contact-name">{{ui.user.name}}</p>
+          <p class="contact-name">{{ui.user.name}}:<br>{{ui.focusedInstance.description}}</p>
         </div>
         <img class="contact-image" ng-src='{{ui.user.imageData}}'>
       </div>
