--- a/src/generic_ui/styles/detail.sass
+++ b/src/generic_ui/styles/detail.sass
@@ -30,7 +30,7 @@
   text-align: center
   width: 100%
   height: 100%
-  padding-top: 40px
+  // padding-top: 40px
   top: 0
   left: 0
   @include smooth
@@ -84,10 +84,17 @@
       background-image: url('../icons/arrow-down-animate.gif')
 
 .instance-actions
+  color: white
+  position: absolute
+  width: 100%
+  font-size: 20px
+  background: #fff url('../icons/web.jpg') no-repeat center -80px
+  background-size: contain
   text-align: center
   font-size: $fontSize * 0.8
   position: absolute
   width: 100%
+  height: 100%
   & .btn
     padding: 6px 12px
     margin-top: 10px
@@ -102,15 +109,6 @@
       &:hover, &:focus
         color: #fff
         background-color: #444
-
-.instance-actions .internet-text
-  color: white
-  position: absolute
-  top: 100px
-  margin-left: auto
-  margin-right: auto
-  width: 100%
-  font-size: 20px
 
 .client-details
   position: relative
