--- a/src/generic_ui/templates/contact.html
+++ b/src/generic_ui/templates/contact.html
@@ -1,7 +1,6 @@
 <div class='instance-actions' ng-show='ui.proxyServerInstance && ui.isUserView()'>
 
-  <div class='get-or-give-buttons'>
-    I would like to
+  <div class='access-gestalt-toggle'>
     <button class="btn"
         ng-click="ui.toggleGetOrGive('GET', ui.proxyServerInstance)"
         ng-disabled="ui.showGetOrGive(ui.proxyServerInstance)=='GET'">
