--- a/src/generic_ui/styles/roster.sass
+++ b/src/generic_ui/styles/roster.sass
@@ -252,7 +252,6 @@ img.c-icon
     opacity: 0.5
 
 // Container for a user's profile picture and such
-// TODO: rename to user- prefix
 .contact-info
   position: absolute
   text-align: center
@@ -264,6 +263,7 @@ img.c-icon
     position: relative
     border-color: #ddd
     background-size: contain
+    background-color: #fff
     box-shadow: 1px 2px 5px #ccc
   &.their-info
     img.contact-image
